--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,15 @@
 *.dll
 *.so
 *.dylib
+/drone-git-update-fork
 
 # Test binary, build with `go test -c`
 *.test
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+
+# IDE
+.vscode
+.idea
+
